# welld

./: .gitignore  README.md  main.py  pyproject.toml  run_agent.py  run_server.py
agents/: root_agent.py
api/: README.md  main.py
config/: mcp_config.json
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/schedule/: route.ts
frontend/src/components/: ChatInterface.tsx  Layout.tsx  MemoryStats.tsx  ScheduleList.tsx  Sidebar.tsx
tools/: user_memory_mcp_server.py  user_schedule_mcp_server.py  youtube_search_mcp_server.py
tools/utils/: mcp_config.json  mcp_connect.py  mcp_discovery.py
