[project]
name = "welld"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-adk>=1.11.0",
    "requests>=2.32.4",
    "fastmcp>=0.1.0",
    "pydantic>=2.0.0",
]

[tool.ruff]
indent-width = 2
line-length = 120
